# curriculum_1_kohei-sakai

./: README.md  check.sh  chmod  users.list
.github/workflows/: js-test.yml  main_finalbackend.yml  os-check.yml
JavaScript_submission1/: index.html  script.js
JavaScript_submission2/: index.html  script.js
backend_fsubmission/: .env  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  startup.sh
backend_fsubmission/backend/api/: main.py
backend_fsubmission/backend/api/cruds/: chat.py
backend_fsubmission/backend/api/models/: chat.py  db.py
backend_fsubmission/backend/api/routers/: chat.py
backend_fsubmission/backend/api/services/: chat.py
backend_fsubmission/my-app-ts/src/: App.css  App.tsx  Message.tsx
ci-task/: grade.js  package-lock.json  package.json
docker-mysql-task/: docker-compose.yaml
final-backend/: .env  docker-compose.yaml
final-backend/backend/api/: main.py
final-backend/backend/api/models/: chat.py  db.py
final-backend/backend/api/schemas/: chat.py
final-backend/my-app-ts/src/: ChatForm.tsx  chatbox.tsx
final_backend/: .dockerignore  README.md  requirements.txt
final_backend/backend/api/: main.py
final_backend/backend/api/models/: db.py
html_submission/: index.html  styles.css
oscommand/: os_C.txt
react-f/my-app-ts/: package-lock.json  package.json
react-f/my-app-ts/src/: App.tsx  Message.tsx  chatbox.css  chatbox.tsx
react1/my-app/src/: App.js  MemoForm.js
react2/my-app-supabase/: package-lock.json  package.json
react2/my-app-supabase/src/: App.jsx  supabaseClient.js
